  to fix this is to split TSM30X (ectype 12) in :
  -TSM70 (ectype 12) => new implementation (compal.c & acpi.c backends)
  -TSM30X (ectype 15) => old implementation (legacy backends)
  This is done by renaming TSM30X to TSM40 and restore old TSM30X
  The state of the Toshiba M35X is unknown and is assigned to TSM70, one
  should send a bug report if that fail.
  Fix bugs 1617818 and 1605278

2.20060921 Mathieu Bérard <math_b@users.sourceforge.net>
* The minimal required kernel version is now 2.6.9 (kref API)
* Convert semaphore to mutex with fallback for pre 2.6.16 kernel
* Kill CONFIG_OMNIBOOK_APMEMU and introduce OMNIBOOK_LEGACY:
  pre-ACPI features now depends on it.
  Default enabling of ac and battery features also
  depends on it. It is _disabled_ by default.
* Introduce ACPI methods execution backend: TSM70 needs it
  for Display and Wifi/Bluetooth features
* Expand display and hotkeys features
* Introduce experimental NbSmi backend for TSM40. It is
  based on technical documentation provided by Toshiba.
  Thanks Toshiba !
* Kill unused omnibook_mem_read/write function for mmio
  access
* Cleanup in blank.c fan.c temperature.c
* Unbreak Pio backend: use request/release_region
* Introduce bluetooth and wifi frontend features : they allow
  adapter state querry and control (existence probing, wifi
  kill switch probing and adapter enabling/disabling).
  Supported by TSM30X and TSM40
* Introduce omnibook_backend struct as a uniform way of 
  communication between backend and frontend, this
  kill omnibook_io_{read/write} and friends.
* Modify ombibook_feature struct to incorporate pointers
  to an omnibook_table table and to a omnibook_operation
  struct which is picked-up from the ectype matching
  omnibook_table entry upon feature initialization
* Add muteled resume handler
* Add touchpad handling for TSM30X
* Add proper display handling for TSM30X
* Change all features struct name from foo_feature to
  foo_driver to kept modpost section mismatch detection