@@ -48,9 +48,9 @@ EXTRA_LDFLAGS +=  $(src)/sections.lds
 
 
 OBJS	= init.o lib.o ec.o kbc.o pio.o compal.o acpi.o nbsmi.o \
-          ac.o battery.o blank.o bluetooth.o display.o dock.o dump.o \
-	  fan.o fan_policy.o hotkeys.o info.o lcd.o muteled.o polling.o \
-	  temperature.o touchpad.o wireless.o
+          ac.o battery.o blank.o bluetooth.o cooling.o display.o dock.o \
+	  dump.o fan.o fan_policy.o hotkeys.o info.o lcd.o muteled.o \
+	  polling.o temperature.o touchpad.o wireless.o throttling.o 
 
 obj-m         += $(MODULE_NAME).o
 omnibook-objs := $(OBJS)
