@@ -30,8 +30,7 @@ static int omnibook_touchpad_set(struct omnibook_operation *io_op, int status)
 		goto out;
 	}
 
-	io_op->backend->misc_state = 
-		(io_op->backend->misc_state & ~TOUCHPAD) | (TOUCHPAD * !!status);
+	io_op->backend->touchpad_state = !!status;
 
 	out:
 	mutex_unlock(&io_op->backend->mutex);
@@ -45,7 +44,7 @@ static int omnibook_touchpad_resume(struct omnibook_operation *io_op)
 {
 	int retval;
 	mutex_lock(&io_op->backend->mutex);
-	retval = __omnibook_toggle(io_op, !!(io_op->backend->misc_state & TOUCHPAD));
+	retval = __omnibook_toggle(io_op, !!io_op->backend->touchpad_state);
 	mutex_unlock(&io_op->backend->mutex);
 	return retval;
 }
@@ -62,7 +61,7 @@ static int omnibook_touchpad_read(char *buffer, struct omnibook_operation *io_op
 
 	len +=
 	    sprintf(buffer + len, "Last touchpad action was an %s command.\n",
-		    (io_op->backend->misc_state & TOUCHPAD) ? "enable" : "disable");
+		    io_op->backend->touchpad_state ? "enable" : "disable");
 
 	mutex_unlock(&io_op->backend->mutex);
 	return len;
@@ -88,7 +87,7 @@ static int __init omnibook_touchpad_init(struct omnibook_operation *io_op)
 {
 	mutex_lock(&io_op->backend->mutex);
 	/* Touchpad is assumed to be enabled by default */
-	io_op->backend->misc_state |= TOUCHPAD;
+	io_op->backend->touchpad_state = 1;
 	mutex_unlock(&io_op->backend->mutex);
 	return 0;
 }
